--- a/webpack/practice/tapable使用/package.json
+++ b/webpack/practice/tapable使用/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "self-config-1",
+  "name": "tapable使用",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^5.78.0",
-    "webpack-cli": "^5.0.1"
+    "tapable": "^2.2.1"
   }
 }
