--- a/rollup/start/package.json
+++ b/rollup/start/package.json
@@ -4,12 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c --environment NODE_ENV:production",
+    "serve": "rollup -c --environment NODE_ENV:development -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^23.0.4",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
+    "@rollup/plugin-terser": "^0.2.0",
+    "@vue/compiler-sfc": "^3.2.45",
+    "postcss-preset-env": "^7.8.3",
+    "rollup": "^3.7.2",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^2.0.2",
+    "rollup-plugin-vue": "^6.0.0"
+  },
   "dependencies": {
-    "rollup": "^3.20.2"
+    "lodash": "^4.17.21",
+    "vue": "^3.2.45"
   }
 }
