--- a/custom-cli/mycli/package.json
+++ b/custom-cli/mycli/package.json
@@ -7,9 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "mycli":"./lib/index.js"
+    "mycli": "./lib/index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "commander": "^10.0.0",
+    "download-git-repo": "^3.0.2"
+  }
 }
